# aws-s3-globa

./: .gitignore  README.md  presign_response.json  response.json
.github/workflows/: deploy-rust-lamda.yml  lambda-presign-arm64.yml
globa-aws-infra/iam/: README.md  s3-put-inline-policy.json  trust-policy.json
globanote/: readme.md  requirements.txt
globanote/backend/: backend.py
globanote/frontend/: frontend.py
react_frontend/: package-lock.json  package.json
react_frontend/public/: index.html  manifest.json
react_frontend/src/: .env  App.jsx  index.js  setupProxy.js  styles.css
react_frontend/src/components/: Login.jsx  NotFound.jsx  Sidebar.jsx
react_frontend/src/components/Dashboard/: Calendar.jsx  Dashboard.jsx  MeetingChatbot.jsx  UsageTracker.jsx
react_frontend/src/components/MeetingSchedule/: MeetingManager.jsx  MeetingReservation.jsx  UpcomingMeeting.jsx
react_frontend/src/components/Notes/: AIMeetingNote.jsx  GlobalNoteCreate.jsx  RealtimeNote.jsx
react_frontend/src/services/: apiService.js
react_frontend/src/styles/: app.css  dashboard.css  login.css  meetingschedule.css  notes.css  sidebar.css
services/lambda-presign/: Cargo.toml
services/lambda-presign/tests/: payload.json  payload_full.json  presign_test.rs
