[package]
name = "lambda-presign"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.82.0"
aws_lambda_events = "0.16.0"
http = "1.3.1"
lambda_http = "0.14.0"
lambda_runtime = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

